# camouchat-whatsapp

./: .gitignore  .pre-commit-config.yaml  Agent.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  None  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  contributors.yml  issue-create-automate-message.yml  pr-create-automate-message.yml  pre-commit.yml  publish.yml
docs/: api_models.md  chat_api.md  controllers.md  core.md  event_arch.md  msg_api.md  storage.md  wa_js.md
src/camouchat_whatsapp/: NoOpPattern.py  __init__.py  exceptions.py  logger.py
src/camouchat_whatsapp/Filter/: message_filter.py
src/camouchat_whatsapp/StorageDB/: models.py  sqlalchemy_storage.py
src/camouchat_whatsapp/api/: __init__.py
src/camouchat_whatsapp/api/managers/: __init__.py  chat_api_processor.py  msg_api_processor.py
src/camouchat_whatsapp/api/models/: __init__.py  chat_api.py  message_api.py
src/camouchat_whatsapp/api/wa_js/: Hierarchy.md  __init__.py  wajs_scripts.py  wajs_wrapper.py  wppconnect-wa.js
src/camouchat_whatsapp/core/: __init__.py  login.py  noop.py  web_ui_config.py
src/camouchat_whatsapp/decorator/: __init__.py  encrypt_hook.py  msg_event_hook.py  storage_hook.py
src/camouchat_whatsapp/features/: __init__.py  interaction_controller.py  media_capable.py  media_controller.py
src/camouchat_whatsapp/filters/: message_filter.py
src/camouchat_whatsapp/storage/: __init__.py  models.py  queries.py  sqlalchemy_storage.py
tests/: smoke_logger_integration.py  smoke_script.py  smoke_test_db.py
tests/E2E/: script_Storage.py  script_click.py  script_hooks.py  script_msgEvent.py  script_real_storage.py
tests/smoke/: smoke_logger_integration.py  smoke_script.py
tests/unit/BrowserManager/: test_browserforge_manager.py  test_camoufox_browser.py  test_fingerprint_uniqueness.py  test_profile_manager.py
tests/unit/Exceptions/: test_exceptions.py  test_tweakio_exceptions.py
tests/unit/StorageDB/: test_sqlalchemy_manual.py
tests/unit/WhatsApp/: test_Humanized_Operations.py  test_Login.py  test_Media_Capable.py  test_Web_UI_Config.py  test_chat_manager.py  test_decorators.py  test_interaction_controller.py  test_media_controller.py  test_message_filter.py  test_message_manager.py  test_models_api.py  test_storage.py  test_wajs_wrapper.py
