[project]
name = "camouchat-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "camouchat-core",
    "camoufox>=0.4.11",
    "filelock>=3.25.2",
    "playwright>=1.58.0",
    "pyperclip>=1.11.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
camouchat-core = { path = "../camouchat-core", editable = true }

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]
