[project]
name = "camouchat-whatsapp"
version = "0.7.3rc1"
description = "High-stealth WhatsApp Web automation plugin for CamouChat. WA-JS powered, async-first, multi-account with AES-256 encrypted storage."
readme = "README.md"
authors = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }
]
maintainers = [
    { name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "whatsapp",
    "whatsapp-automation",
    "whatsapp-bot",
    "whatsapp-web",
    "whatsapp-web-automation",
    "wa-js",
    "wppconnect",
    "stealth",
    "anti-detection",
    "anti-ban",
    "fingerprinting",
    "bot",
    "async",
    "asyncio",
    "camouchat",
    "playwright",
    "camoufox",
    "automation-framework",
    "aes-256",
    "encrypted-storage",
    "multi-account",
    "chat-bot",
    "agents",
    "web-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "camouchat-browser>=0.7.1",
    "camouchat-core>=0.7.1",
    "filelock>=3.25.2",
    "playwright>=1.58.0",
    "pyperclip>=1.11.0",
    "sqlalchemy>=2.0.49",
]

[project.urls]
Homepage = "https://github.com/CamouChat-Team"
Repository = "https://github.com/CamouChat-Team/camouchat-whatsapp"
"Bug Tracker" = "https://github.com/CamouChat-Team/camouchat-whatsapp/issues"
Changelog = "https://github.com/CamouChat-Team/camouchat-whatsapp/releases"

[tool.deptry]
known_first_party = ["camouchat_whatsapp"]
per_rule_ignores = { DEP002 = "aiosqlite", DEP003 = "camouchat_whatsapp" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=camouchat_whatsapp --cov-report=term-missing"

[tool.coverage.run]
source = ["camouchat_whatsapp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "types-pyperclip>=1.9.0.20241221",
    "deptry>=0.25.1",
    "pre-commit>=4.5.1",
]
